# engine-core

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  USAGE.md  docker-compose.dev.yml  lint_errors.txt  lint_errors_after.txt  pyproject.toml  pytest.ini  requirements.txt  test_agent.py  test_api_integration.py  test_calculator_plugin.py  test_tool_integration.py  test_workflow_builder.py  test_workflow_execution.py  test_workflow_integration.py
.github/workflows/: ci-cd.yml  ci.yml  release.yml
config/: shared-config.yaml
docs/: agent-configuration.md  api-reference.md  getting-started.md  index.html  team-coordination.md  workflow-design.md
k8s/: deployment.yaml
src/: __init__.py  test_context_scope.py  test_dataclass.py  test_protocol_builder.py
src/api/: __init__.py  dependencies.py  main.py  websocket.py
src/api/routers/: __init__.py  agents.py  books.py  observability.py  projects.py  protocols.py  teams.py  tools.py  workflows.py
src/api/schemas/: __init__.py  base_schemas.py  book_schemas.py  enums.py  protocol_schemas.py  team_schemas.py  tool_schemas.py  validators.py  workflow_schemas.py
src/auth/: __init__.py  auth_service.py
src/cli/: __init__.py
src/core/: __init__.py  project_service.py
src/core/agents/: __init__.py  agent_builder.py  agent_config.py
src/core/book/: __init__.py
src/core/protocols/: __init__.py
src/core/teams/: __init__.py  team_builder.py
src/core/tools/: __init__.py  tool_builder.py  tool_executor.py
src/core/workflows/: __init__.py  actors.py  workflow_engine.py
src/engine_core/: __init__.py  engine_types.py
src/engine_core/api/: __init__.py  dependencies.py  main.py  websocket.py
src/models/: __init__.py  base.py  book.py  infrastructure.py  project.py  protocol.py  tool.py  workflow.py
src/services/: agent_service.py  book_service.py  observability_service.py  protocol_service.py  team_service.py  tool_service.py  workflow_service.py
src/shared_types/: __init__.py  engine_types.py
tests/: conftest.py  smoke_test.py  test_api_integration.py  test_context_scope.py  test_dataclass.py  test_protocol_builder.py  test_workflow_builder.py  test_workflow_execution.py  test_workflow_integration.py
tests/contract/: __init__.py  test_public_api_contract.py
tests/integration/: test_agent_independence.py  test_cross_pillar_integration.py  test_team_agent_integration.py  test_team_independence.py
tests/unit/: test_agent_builder_minimal.py  test_api.py  test_book_system.py  test_engine_types.py  test_import.py  test_protocol_builder.py  test_protocol_execution.py  test_team_builder_complete.py  test_team_builder_essential.py
(+66 files in other folders)
